k8s/profile-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-page-deployment
  namespace: profile-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-page-deployment
  template:
    metadata:
      labels:
        app: profile-page-deployment
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: profile-page-deployment
        image: shittuay/profile_page:v.0.63 # Ensure this image name is correct
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
