k8s/master-profile-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-profile-page-service
  namespace: profile-page
spec:
  type: NodePort
  selector:
    app: master-profile-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30042
