k8s/nginx-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31344
    - port: 443
      targetPort: 443
      nodePort: 30348
  selector:
    app.kubernetes.io/name: ingress-nginx
