k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-page-ingress
  namespace: profile-page
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: techtalesbyabiola.org
    http:
      paths:
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: profile-page-service
            port:
              number: 30042
      - path: /master
        pathType: Prefix
        backend:
          service:
            name: master-profile-page-service
            port:
              number: 80
